# BODtoJSON

./: .gitignore  BODtoFlatJSON.py  LICENSE  Map.py  README.md  config.py  pyproject.toml
BODtoJSON/: BODtoJSON.py
BODtoJSON.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Client/: Client.py
Test/: Client.py
core/: BOD2FlatJson.py  BOD2JSON.py
scripts/: inspect_payload.py
src/BODtoJSON/: __init__.py  mapper.py
tests/: config.py  test_mapper.py
