[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BODtoJSON"
version = "1.0.0"
authors = [
  { name="Niraj Kakodkar" },
]
description = "Production-grade Infor OAGIS BOD to Flattened JSON converter."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "xmltodict",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/thekakodkar/BODtoJSON"